# dev-talk

./: .gitignore  CLAUDE.md  DevTalk.spec  LICENSE  README.md  design.md  initial_analysis.md  pyproject.toml  setup.py  tasks.md
src/dev_talk/: __init__.py  __main__.py  app.py  audio.py  config.py  diagnostics.py  hotkeys.py  overlay.py  text_input.py  transcriber.py  vad.py
src/dev_talk/engines/: local_mlx.py  remote_openai.py
src/dev_talk/resources/: DevTalk.icns
tests/: conftest.py  test_app.py  test_audio.py  test_config.py  test_engine_mlx.py  test_engine_openai.py  test_hotkeys.py  test_overlay.py  test_text_input.py  test_transcriber.py  test_vad.py
