[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-talk"
version = "0.1.0"
description = "Local speech-to-text macOS menubar app powered by MLX Whisper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["speech-to-text", "whisper", "macos", "mlx", "voice"]

dependencies = [
    "rumps>=0.4.0",
    "pyobjc-core>=11.0",
    "pyobjc-framework-Cocoa>=11.0",
    "pyobjc-framework-Quartz>=11.0",
    "pyobjc-framework-Accessibility>=11.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0",

    "mlx-whisper>=0.4.0",
    "openai>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "ruff>=0.9.0",
]

[project.scripts]
dev-talk = "dev_talk.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
